--- a/client/src/app/pages/company/company-detail/company-detail.component.html
+++ b/client/src/app/pages/company/company-detail/company-detail.component.html
@@ -505,7 +505,7 @@
                   <div class="jobdesc-space">
 
                     <h5>Job Description</h5>
-                    <p>
+                    <p class="jobdesc-space-pera">
                       {{job.position_desc}}
                     </p>
                   </div>
