--- a/client/src/app/components/action-button/action-button.component.scss
+++ b/client/src/app/components/action-button/action-button.component.scss
@@ -166,7 +166,7 @@
   font-weight: 500;
   font-size: 12px;
   font-family: "Poppins", sans-serif;
-  z-index: 1;
+  //z-index: 1;
 }
 :host-context(.show-button2) button {
   line-height: initial;
