--- a/client/src/app/components/main-toolbar/main-toolbar.component.scss
+++ b/client/src/app/components/main-toolbar/main-toolbar.component.scss
@@ -96,8 +96,9 @@ mat-toolbar{
   span {
     color: white;
     margin-left: 5px;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins-Light", sans-serif;
     font-size: 15px;
+    font-weight: 100;
   }
 }
 
