CAR-000 description modification.

--- a/client/src/app/pages/read-more/read-more.component.html
+++ b/client/src/app/pages/read-more/read-more.component.html
@@ -46,7 +46,7 @@
     <h1>Gregory Cho</h1>
     <h2>Founder and CEO</h2>
     <p>
-        A Master’s Student at Brown University studying Computer Science and Economics, Gregory is dedicated to constructing technologies with significant social value and impact potential. After studying about the growing inefficiencies in the labor market, he constructed the numerous algorithms necessary for yourCareerFair to combat such pernicious effects and, thereby, increase social utility.
+        A Master’s Student at Brown University studying Computer Science and Economics, he is dedicated to constructing technologies with significant social value and impact potential. After studying about the growing inefficiencies in the labor market, he constructed the numerous algorithms necessary for yourCareerFair in the hopes that it might reduce frictional unemployment.
     </p>
 
     <h1>Dimitar Dimitrov</h1>
