add disability section in profile page

--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
@@ -218,7 +218,8 @@
     &.proof-auth {
       width: fit-content
     }
-    &.military-service {
+    &.military-service,
+    &.disability-info {
       min-width: 200px;
       max-width: 650px;
     }
