--- a/client/src/app/pages/profile/create-profile/create-profile.component.scss
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.scss
@@ -408,7 +408,8 @@ p {
           &.proof-auth {
             width: fit-content;
           }
-          &.military-service {
+          &.military-service,
+          &.disability-info {
             min-width: 200px;
             max-width: 650px;
           }
