--- a/client/src/app/pages/read-more/read-more.component.html
+++ b/client/src/app/pages/read-more/read-more.component.html
@@ -46,7 +46,7 @@
     <h1>Gregory Cho</h1>
     <h2>Founder and CEO</h2>
     <p>
-        A Master’s Student at Brown University studying Computer Science and Economics, he is dedicated to constructing technologies with significant social value and impact potential. After studying about the growing inefficiencies in the labor market, he constructed the numerous algorithms necessary for yourCareerFair in the hopes that it might reduce frictional unemployment.
+        Gregory is a Master’s Student at Brown University studying Computer Science and Economics with a focus in Machine Learning, he is dedicated to constructing technologies with social value and impact potential. Gregory developed all algorithms and backend components for yourCareerFair after studying about the growing inefficiencies in the labor market in the hopes that the application might reduce frictional unemployment and lower the levels of underemployment amongst those most greatly affected by the economy's shifting paradigms, such as college graduates.
     </p>
 
     <h1>Dimitar Dimitrov</h1>
