CAR-000 Fixed linting errors and removed Dimi from masthead (at his request).

--- a/client/src/app/pages/read-more/read-more.component.html
+++ b/client/src/app/pages/read-more/read-more.component.html
@@ -1,6 +1,6 @@
 <div class="page-container">
     <div class="logo-row">
-        <img alt="Career Fair Logo" src="assets/icons/ic_cf_logo_official.png">
+        <img alt="Career Fair Logo" src="assets/icons/ic_cf_logo_blue_official.png">
         <h1>yourCareerFair</h1>
     </div>
     <p>
@@ -44,14 +44,8 @@
     </p>
 
     <h1>Gregory Cho</h1>
-    <h2>Founder and CEO</h2>
+    <h2>Founder</h2>
     <p>
-        Gregory is a Master’s Student at Brown University studying Computer Science and Economics with a focus in Machine Learning, he is dedicated to constructing technologies with social value and impact potential. Gregory developed all algorithms and backend components for yourCareerFair after studying about the growing inefficiencies in the labor market in the hopes that the application might reduce frictional unemployment and lower the levels of underemployment amongst those most greatly affected by the economy's shifting paradigms, such as college graduates.
-    </p>
-
-    <h1>Dimitar Dimitrov</h1>
-    <h2>Co-Founder and Senior Front End Manager</h2>
-    <p>
-        A former employee of IBM and SLG, Dimitar Dimitrov is an extremely talented front end engineer who is responsible for overseeing the construction of many of yourCareerFair’s front end resources.
+        Gregory is a Master’s Student at Brown University studying Computer Science and Economics with a focus in Machine Learning, he is dedicated to constructing technologies with social value and impact potential. Gregory developed all algorithms, UI designs, and backend components for yourCareerFair after studying about the growing inefficiencies in the labor market in the hopes that the application might reduce frictional unemployment and lower the levels of underemployment amongst those affected by the economy's shifting paradigms, such as college graduates.
     </p>
 </div>
